<package format="2">
  <name>object_navigation_layers</name>
  <version>0.4.0</version>
  <description>
  Plugin-based layers for the navigation stack that
  implement various object navigation contraints, like proxemic distance.
  </description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/object_navigation_layers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>
